Fix anacrusis being misaligned

--- a/components/song/Song.module.scss
+++ b/components/song/Song.module.scss
@@ -148,6 +148,7 @@ $eightColWidth: 1760px;
 // Lyrics row.
 .lyrics {
   height: 2em;
+  margin-top: auto;
 
   .left {
     float: left;
